--- a/src/templates/api.ejs
+++ b/src/templates/api.ejs
@@ -4,7 +4,8 @@ import axios from 'axios';
 /**  ============================= API ======================================  */
 
 <% pathsResult.forEach(function(pathInfo){ %>
-  function <%- pathInfo.apiName %>(<%- pathInfo.parameters %> options?: any): Promise<<%- pathInfo.response %>> {
+  function <%- pathInfo.apiName %>(<%- pathInfo.parameters %>options?: any
+  ): Promise<<%- pathInfo.response %>> {
     return axios({}).then(response => {
       if (response.status >= 200 && response.status < 300) {
         return response.data;
